--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "webpack-admin-dashboard",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vijaykumar51/webpack-admin-dashboard.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/vijaykumar51/webpack-admin-dashboard/issues"
-  },
-  "homepage": "https://github.com/vijaykumar51/webpack-admin-dashboard#readme",
-  "devDependencies": {
-    "node-notifier": "^5.1.2"
-  },
-  "dependencies": {
-    "circular-json": "^0.5.1"
-  }
+	"name": "webpack-admin-dashboard",
+	"version": "1.0.0",
+	"description": "",
+	"main": "main-electron.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/vijaykumar51/webpack-admin-dashboard.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/vijaykumar51/webpack-admin-dashboard/issues"
+	},
+	"homepage": "https://github.com/vijaykumar51/webpack-admin-dashboard#readme",
+	"devDependencies": {
+		"electron": "^1.7.10",
+		"electron-prebuilt": "^1.4.13",
+		"node-notifier": "^5.1.2"
+	},
+	"dependencies": {
+		"circular-json": "^0.5.1"
+	}
 }
